--- a/style.css
+++ b/style.css
@@ -165,12 +165,13 @@ section {
 #profile {
   display: flex;
   justify-content: center;
-  gap: 5rem;
+  gap: 10rem;
   height: 80vh;
 }
 
 .section__pic-container {
   display: flex;
+  justify-content: center;
   height: 400px;
   width: 400px;
   margin: auto 0;
